--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,12 @@
-spring.datasource.username=admin
-spring.datasource.password=admin
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=username
+spring.datasource.password=password
+spring.datasource.url=jdbc:postgresql://172.80.0.2:5432/default
 spring.jpa.hibernate.ddl-auto=update
+
+
+
+#spring.datasource.username=${POSTGRES_USER}
+#spring.datasource.password=${POSTGRES_PASSWORD}
+#spring.datasource.url=${POSTGRES_DB}
+#spring.jpa.hibernate.ddl-auto=update
+
